<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fundamentalandroid.dicodingevents.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailEvent"
            app:destination="@id/detailEvent" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.fundamentalandroid.dicodingevents.ui.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" >
        <action
            android:id="@+id/action_navigation_upcoming_to_detailEvent"
            app:destination="@id/detailEvent" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.fundamentalandroid.dicodingevents.ui.finished.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished" >
        <action
            android:id="@+id/action_navigation_finished_to_detailEvent"
            app:destination="@id/detailEvent" />
    </fragment>
    <fragment
        android:id="@+id/detailEvent"
        android:name="com.fundamentalandroid.dicodingevents.ui.detail.DetailEvent"
        android:label="fragment_detail_event"
        tools:layout="@layout/fragment_detail_event" />
</navigation>